test/tests/compiler/8_loops/invalid_parse/extra_credit/switch_case_declaration.plx
pub fn main(none) i32 {
    match 3 {
        -> i: i32 = 3 {
            return i
        }
    }
    return 0
}
